{
    "name": "InputSystem",
    "maps": [
        {
            "name": "PlayerInputKeyboard",
            "id": "e1d72bf1-f98a-46aa-b975-ecf4d9148b20",
            "actions": [
                {
                    "name": "Keyboard",
                    "type": "Value",
                    "id": "3cd9213d-b307-436e-a645-87765fb1156f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractButton",
                    "type": "Button",
                    "id": "2332cb19-43de-4403-b46e-efac913ce3c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractButtonAlternate",
                    "type": "Button",
                    "id": "6e60c705-da0e-4044-9e17-76b9b8e54f58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "cacea3b9-e6de-4eee-bdd5-48bf83de85d7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6aa3b5ad-9150-4ce8-adca-ae7a4ecc4e57",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1c4fe202-8ca6-469f-9384-83447989c752",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cb095edb-425d-4170-bbc4-8d1765fdc6db",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "25bdd718-da52-48f2-ace8-083eac7fde1f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d9a1ae67-337f-49e7-bdcd-f2fb197118d5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "125bc007-7d0b-4151-a365-680723666a18",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractButtonAlternate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}